--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "inngest": "^3.51.0",
     "mongoose": "^9.1.3",
     "multer": "^2.0.2"
   },
